--- a/Evidencia 2.2.qmd
+++ b/Evidencia 2.2.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Evidencia 2"
-author: "Adara Pulido"
+title: "Evidencia 2 - ADNI Study Case"
+author: "Cristóbal Estrada Salinas"
 format: html
 editor: visual
 ---
